# hse-haskell-2021-homework-2

./: Eval.hs  Moving.hs  NonEmpty.hs  Parser.hs  README.md  RWS.hs  StringSum.hs  homework.cabal
.github/workflows/: haskell.yml
