cabal-version: 2.2

name: homework
version: 2021.2

test-suite homework
  build-depends:
    base,
    QuickCheck,
    tasty,
    tasty-discover,
    tasty-quickcheck,
  default-extensions: EmptyDataDeriving LambdaCase TemplateHaskell
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    StringSum
    NonEmpty
    Eval
    Moving
    Parser
    RWS
  type: exitcode-stdio-1.0
